--- a/src/tmpl/main.tmpl
+++ b/src/tmpl/main.tmpl
@@ -22,7 +22,7 @@
 # if c.loggedIn:
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.0/src/js.cookie.min.js" defer></script>
 
-<script src="https://maps.google.com/maps/api/js" type="text/javascript" defer></script>
+<script src="https://maps.google.com/maps/api/js$gMapsApi" type="text/javascript" defer></script>
 
 <script src="/js/js.js" defer></script>
 # end if
