--- a/public/css/style.css
+++ b/public/css/style.css
@@ -542,16 +542,6 @@ div#alarm table.alarmPasswords .alarmDeletePassword {
 /*
   Alarm numpad
 */
-div#alarmNumpad {
-  /*Switced to BS modal
-  width: 250px;
-  padding: 10px;
-  border: 3px solid #2c2c2c;
-  background: white;
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);*/
-}
 div#alarmModel div.modal-dialog {
   max-width: 300px;
 }
@@ -622,4 +612,28 @@ div#pushbullet div.pushbulletApi input.api.key {
 }
 div#pushbullet table.pushbulletTemplates {
   max-width: 1200px;
+}
+
+
+/*
+  Cron
+*/
+div#cron {
+  padding: 20px;
+}
+div#cron table.cronActions {
+  max-width: 800px;
+}
+div#cron table.cronActions .cronDeleteAction,
+div#cron table.cronActions .cronActionAdd {
+  width: 100%;
+}
+div#cron table.cronActions thead td.time {
+  width: 100px;
+}
+div#cron table.cronActions thead td.time input.crontime {
+  text-align: center;
+}
+div#cron table.cronActions tbody td.time {
+  text-align: center;
 }
