--- a/src/tmpl/cron.tmpl
+++ b/src/tmpl/cron.tmpl
@@ -47,7 +47,7 @@
             #   select.add("<option value='" & xiaomi[0] & "' data-element='xiaomi'>Xiaomi: " & xiaomi[1] & " (" & xiaomi[2] & ")</option>")
             # end for
 
-            <h5>Time is set with 24H format with HH:mm, e.g. 22:02, 23:55.</h5>
+            <p>Time is set with 24H format and specified with hour and minut: HH:mm (e.g. 22:02, 23:55)</p>
 
             <table class="cronActions table table-bordered table-hover">
               <thead>
