Pushbullet test connection

--- a/src/tmpl/pushbullet.tmpl
+++ b/src/tmpl/pushbullet.tmpl
@@ -43,6 +43,19 @@
 
           <hr>
 
+          <div class="pushbulletTest">
+
+            <h3>Test connection</h3>
+
+            <div>
+              <label>Send a test message</label>
+              <button class="btn btn-primary" id="pushbulletTest" style="display: block; margin-top: 0px;">Test connection</button>
+            </div>
+
+          </div>
+
+          <hr>
+
           <div class="pushbulletTemplates">
             # let pushTemplates = getAllRows(db, sql"SELECT id, name, title, body FROM pushbullet_templates")
 
