Only show owntracks Gmap if data exists

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -266,7 +266,7 @@
             # end if
 
 
-
+            # if getAllRows(db, sql"SELECT id FROM owntracks_history").len() > 0:
             <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
               <div class="inner">
                 <div class="owntracks">
@@ -277,6 +277,7 @@
                 </div>
               </div>
             </div>
+            # end if
 
 
             
