--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -280,6 +280,22 @@
             # end if
 
 
+
+            # let rssFeeds = getAllRows(db, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
+            # for feed in rssFeeds:
+            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+              <div class="inner">
+                <div class="rss">
+                  <div class="heading">RSS - ${feed[4]} <span data-feedid="${feed[0]}" class="rssRefresh badge badge-primary">Refresh</span></div>
+                  <div id="rss-${feed[0]}" class="rssInner scrollbar">
+                    ${rssReadUrl(feed[4], feed[1], feed[3].split(","), parseInt(feed[2]))}
+                  </div>
+                </div>
+              </div>
+            </div>
+            # end for
+
+
             
 
             <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
