Add RSS in sidebar

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -55,13 +55,14 @@
     <li>
       <a href="#submenu1" data-toggle="collapse" aria-expanded="false">Pages</a>
       <ul class="collapse list-unstyled" id="submenu1">
-        <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
-        <li><a href="/owntracks">Owntracks</a></li>
-        <li><a href="/certificates">Certificates</a></li>
         <li><a href="/alarm">Alarm</a></li>
-        <li><a href="/pushbullet">Pushbullet</a></li>
-        <li><a href="/mail">Mail</a></li>
+        <li><a href="/certificates">Certificates</a></li>
         <li><a href="/cron">Cron jobs</a></li>
+        <li><a href="/mail">Mail</a></li>
+        <li><a href="/owntracks">Owntracks</a></li>
+        <li><a href="/pushbullet">Pushbullet</a></li>
+        <li><a href="/rss">RSS</a></li>
+        <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
       </ul>
     <li><a href="https://github.com/ThomasTJdev/nim_homeassistant">Github</a></li>
     <li><a href="/logout">Logout</a></li>
