Removed recursive loop

--- a/nimhapkg/tmpl/users.tmpl
+++ b/nimhapkg/tmpl/users.tmpl
@@ -27,7 +27,7 @@
           <h3 style="color: red;">$errorMsg</h3>
           # end if
 
-          <form method="POST" action="/login/do">
+          <form method="POST" action="/dologin">
             <input type="email" name="email" class="form-control" placeholder="Email" />
             <input type="password" name="password" class="form-control" placeholder="Password" />
 
