--- a/nimhapkg/tmpl/xiaomi.tmpl
+++ b/nimhapkg/tmpl/xiaomi.tmpl
@@ -243,12 +243,12 @@
                 <h4>Report</h4>
                 <div>
                   <p>The report is primary used in conjuction with the alarm. When using the report, you need to specify the "Value data" and the "Trigger alarm".</p>
-                  <p>For PIR sensors the "Value data" would be <kbd>status</kbd> and the "Value name" would bed <kbd>motion</kbd></p>
-                  <p>For magnet sensors the "Value data" would be <kbd>status</kbd> and the "Value name" would bed <kbd>open</kbd> or <kbd>close</kbd></p>
+                  <p>For PIR sensors the "Value name" would be <kbd>status</kbd> and the "Value data" would bed <kbd>motion</kbd></p>
+                  <p>For magnet sensors the "Value name" would be <kbd>status</kbd> and the "Value data" would bed <kbd>open</kbd> or <kbd>close</kbd></p>
                 </div>
               </div>
               <div class="valuedata">
-                <h4>Value data</h4>
+                <h4>Value name</h4>
                 <div>
                   <p>Examples of possible values for "Value data":</p>
                   <ul>
@@ -368,7 +368,7 @@
                 <p>To adjust the volume, append a comma and the volume number. Using ringtone 8 and volumne level 4: <kbd>8,4</kbd></p>
               </div>
               <div>
-                <p>To create a action to stop the sound (good idea!), insert <kbd>10000</kbd> in the "Value data".</p>
+                <p>To create an action to stop the sound (good idea!), insert <kbd>10000</kbd> in the "Value data".</p>
               </div>
             </div>
             
