--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -282,6 +282,23 @@
 
 
 
+            # let mjpegStreams = getAllRows(db, sql"SELECT id, name, url FROM mjpegstream")
+            # for stream in mjpegStreams:
+            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
+              <div class="inner">
+                <div class="mjpegstream">
+                  <div class="heading">
+                    <span class="heading">${stream[1]}</span>
+                    <span data-streamid="${stream[0]}" class="mjpegstreamToggle badge badge-primary">Start/Pause</span>
+                  </div>
+                  <img id="mjpegstream-${stream[0]}" data-url="${stream[2]}" data-toggle="play" src="${stream[2]}">
+                </div>
+              </div>
+            </div>
+            # end for
+
+
+
             # let rssFeeds = getAllRows(db, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
             # for feed in rssFeeds:
             <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
