--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -131,236 +131,23 @@
         <div class="container-fluid">
           <div class="row">
 
-
-
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                # let alarmStatus = getValue(db, sql"SELECT status FROM alarm WHERE id = ?", "1")
-                # template alarmClass(status: string): string =
-                #   if status == alarmStatus:
-                #     if alarmStatus == "disarmed":
-                #       "badge-success"
-                #     else:
-                #       "badge-danger"
-                #     end if
-                #   else:
-                #     "badge-secondary"
-                #   end if
-                # end template
-                #
-                # template alarmText(status: string): string =
-                #   if status == alarmStatus:
-                #     "True"
-                #   else:
-                #     "False"
-                #   end if
-                # end template
-                #
-                # var canActivate = ""
-
-                <div class="alarm">
-                  <div class="heading">Alarm status</div>
-                  <div class="alarmInner">
-                    <div class="disarmed">
-                      <label>Disarmed</label>
-                      <span class="status disarmed badge ${alarmClass("disarmed")}">${alarmText("disarmed")}</span>
-                      # canActivate = ""
-                      # if alarmText("disarmed") == "True":
-                      #   canActivate = "hide"
-                      # end if
-                      <span data-status="disarmed" class="$canActivate activate badge badge-warning">Activate</span>
-                    </div>
-                    <div class="armAway">
-                      <label>Armed away</label>
-                      <span class="status armAway badge ${alarmClass("armAway")}">${alarmText("armAway")}</span>
-                      # canActivate = ""
-                      # if alarmText("armAway") == "True":
-                      #   canActivate = "hide"
-                      # end if
-                      <span data-status="armAway" class="$canActivate activate badge badge-warning">Activate</span>
-                    </div>
-                    <div class="armHome">
-                      <label>Armed home</label>
-                      <span class="status armHome badge ${alarmClass("armHome")}">${alarmText("armHome")}</span>
-                      # canActivate = ""
-                      # if alarmText("armHome") == "True":
-                      #   canActivate = "hide"
-                      # end if
-                      <span data-status="armHome" class="$canActivate activate badge badge-warning">Activate</span>
-                    </div>
-                    <div class="triggered">
-                      <label>Triggered</label>
-                      <span class="status triggered badge ${alarmClass("triggered")}">${alarmText("triggered")}</span>
-                    </div>
-                    <div class="ringing">
-                      <label>Ringing</label>
-                      <span class="status ringing badge ${alarmClass("ringing")}">${alarmText("ringing")}</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-
-            # let certificates = getAllRows(db, sql"SELECT name, url, port FROM certificates ORDER BY name ASC")
-            # if certificates.len() > 0:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="certexpiry">
-                  <div class="heading">Cert expiration</div>
-                  <div class="certexpiryInner">
-                    # for cert in certificates:
-
-                      <div class="cert">
-                        <label>${cert[0]}</label>
-                        <div class="days ${replace(cert[1], ".", "")}"></div>
-                        <span data-server="${cert[1]}" data-port="${cert[2]}" class="certRefresh badge badge-primary">Refresh</span>
-                      </div>
-
-                    # end for
-                  </div>
-                </div>
-              </div>
-            </div>
-            # end if
-
-
-            # let pushAll = getAllRows(db, sql"SELECT id, name FROM pushbullet_templates")
-            # if pushAll.len() > 0:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="pushbullet">
-                  <div class="heading">Pushbullet</div>
-                  <div class="pushbulletInner">
-                    # for push in pushAll:
-                    <div>
-                      <label>${push[1]}</label>
-                      <span data-pushid="${push[0]}" class="badge badge-primary pushbulletSend">Send</span>
-                    </div>
-                    # end for
-                  </div>
-                </div>
-              </div>
-            </div>
-            # end if
-
-
-            # let xiaomiDevices = getAllRows(db, sql"SELECT xdd.sid, xd.name, xdd.value_name, xdd.action FROM xiaomi_devices_data AS xdd LEFT JOIN xiaomi_devices AS xd ON xd.sid = xdd.sid WHERE xdd.triggerAlarm = ? ORDER BY xd.name ASC", "false")
-            # if xiaomiDevices.len() > 0:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="xiaomi">
-                  <div class="heading">Xiaomi device status</div>
-                  <div class="xiaomiInner">
-                    # for device in xiaomiDevices:
-                    <div class="${device[0]} device ${device[2]}">
-                      <label>${device[1]}</label>
-                      <div class="value"></div>
-                      <span data-sid="${device[0]}" data-action="${device[3]}" data-value="${device[2]}" class="xiaomiRefresh badge badge-primary">Refresh</span>
-                    </div>
-                    # end for
-                  </div>
-                </div>
-              </div>
-            </div>
-            # end if
-
-
-            # if getAllRows(db, sql"SELECT id FROM owntracks_history").len() > 0:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="owntracks">
-                  <div class="heading">Owntracks map <span class="owntracksRefresh badge badge-primary">Refresh</span></div>
-                  <div class="owntracksInner">
-                    <div id="map" style="width: 100%; height: 100%"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            # end if
-
-
-
-            # let mjpegStreams = getAllRows(db, sql"SELECT id, name, url FROM mjpegstream")
-            # for stream in mjpegStreams:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="mjpegstream">
-                  <div class="heading">
-                    <span class="heading">${stream[1]}</span>
-                    <span data-streamid="${stream[0]}" class="mjpegstreamToggle badge badge-primary">Start/Pause</span>
-                  </div>
-                  <img id="mjpegstream-${stream[0]}" data-url="${stream[2]}" data-toggle="play" src="${stream[2]}">
-                </div>
-              </div>
-            </div>
-            # end for
-
-
-
-            # let rssFeeds = getAllRows(db, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
-            # for feed in rssFeeds:
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="rss">
-                  <div class="heading">RSS - ${feed[4]} <span data-feedid="${feed[0]}" class="rssRefresh badge badge-primary">Refresh</span></div>
-                  <div id="rss-${feed[0]}" class="rssInner scrollbar">
-                    ${rssReadUrl(feed[4], feed[1], feed[3].split(","), parseInt(feed[2]))}
-                  </div>
-                </div>
-              </div>
-            </div>
-            # end for
-
-
+            ${cardAlarm(c)}
             
+            ${cardCertificates(c)}
 
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="wsusers">
-                  <div class="heading">Websocket users</div>
-                  <div class="wsusersInner">
-                  </div>
-                  <div class="user clone" style="display: none">
-                  </div>
-                </div>
-              </div>
-            </div>
+            ${cardPushbullet(c)}
 
+            ${cardXiaomiDevice(c)}
+            
+            ${cardOwntracks(c)}
 
-            <div class="item col-12 col-sm-6 col-md-6 col-lg-3">
-              <div class="inner">
-                <div class="osstats">
-                  <div class="heading">
-                    <span class="heading">OS stats</span>
-                    <span id="osstatsRefresh" class="badge badge-primary">Refresh</span>
-                  </div>
-                  <div class="osstatsInner">
-                    <div class="stats">
-                      <label>Free mem: </label> <span class="freemem"></span>
-                    </div>
-                    <div class="stats">
-                      <label>Used mem: </label> <span class="usedmem"></span>
-                    </div>
-                    <div class="stats">
-                      <label>Free swap: </label> <span class="freeswap"></span>
-                    </div>
-                    <div class="stats">
-                      <label>Used swap: </label> <span class="usedswap"></span>
-                    </div>
-                    <div class="stats">
-                      <label>Host IP: </label> <span class="hostip"></span>
-                    </div>
-                    <div class="stats">
-                      <label>Active connections: </label> <span class="connections"></span>
-                    </div>
-                  </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            ${cardMjpegstream(c)}
 
+            ${cardRss(c)}
+            
+            ${cardWebsocketUsers(c)}
+
+            ${cardOsStats(c)}
 
           </div>
         </div>
